--- a/style.css
+++ b/style.css
@@ -31,12 +31,42 @@
 }
 
 .demo-responsive {
-    height: 60vh;
+    height: 50vh;
     width: 80%;
 }
 
 @media screen and (max-width: 768px) {
     .demo-responsive {
+        width: 100%;
+    }
+}
+
+.w-70 {
+    width: 70%;
+}
+
+@media screen and (max-width: 768px) {
+    .w-80 {
+        width: 85%;
+    }
+}
+
+.responsive-card {
+    width: 18rem;
+}
+
+@media screen and (max-width: 768px) {
+    .responsive-card {
+        width: 22rem;
+    }
+}
+
+.title-w-70 {
+    width: 70%;
+}
+
+@media screen and (max-width: 768px) {
+    .title-w-70 {
         width: 100%;
     }
 }
