--- a/style.css
+++ b/style.css
@@ -8,7 +8,24 @@
     width: 60%;
 }
 
+.demo-responsive {
+    height: 50vh;
+    width: 80%;
+}
 
+.text-responsive {
+    width: 75%;
+}
+
+.title-w-70 {
+    width: 70%;
+}
+
+.customers-say {
+    width: 80%;
+}
+
+/* for mobile  */
 @media screen and (max-width: 575px) {
     .hero-text {
         width: 100%;
@@ -17,67 +34,52 @@
     .hero-base h1 {
         font-size: 36px;
     }
+
+    .customers-say {
+        width: 100%;
+    }
+
+    .email-field,
+    .send-btn {
+        width: 100% ! important;
+        margin: 10px 0 ! important;
+        border-radius: 5px ! important;
+    }
+
+    .demo-responsive,
+    .text-responsive {
+        height: auto;
+        width: 100%;
+    }
 }
 
-.text-responsive {
-    width: 75%;
-}
 
-@media screen and (max-width: 820px) {
+/* for tablet */
+@media screen and (min-width: 576px) and (max-width: 991px) {
     .text-responsive {
         width: 100%;
 
     }
-}
 
-.demo-responsive {
-    height: 50vh;
-    width: 80%;
-}
+    .text-responsive {
+        width: 100%;
 
-@media screen and (max-width: 768px) {
+    }
+
     .demo-responsive {
         width: 100%;
     }
-}
 
-.w-70 {
-    width: 70%;
-}
-
-@media screen and (max-width: 768px) {
     .w-80 {
         width: 85%;
     }
-}
 
-.responsive-card {
-    width: 18rem;
-}
-
-@media screen and (max-width: 768px) {
     .responsive-card {
         width: 22rem;
     }
-}
 
-.title-w-70 {
-    width: 70%;
-}
-
-@media screen and (max-width: 768px) {
     .title-w-70 {
         width: 100%;
     }
-}
 
-.customers-say {
-    width: 80%;
-}
-
-
-@media screen and (max-width: 393px) {
-    .customers-say {
-        width: 100%;
-    }
 }
